# ml-lambdas

./: .dockerignore  .gitignore  Cargo.toml  README.md
bench/: EXPERIMENT_PIPELINE.md  INSTRUCTION_PARITY.md  SETUP_NOTES.md  compare.sh  decode_prefetch_ab.sh  ec2_setup.sh  fullstack_n1.sh  headtohead_n1.sh  i8mm_prefill.sh  instr_breakdown.sh  lanerow_ab.sh  leaveoneout_n1.sh  parelemwise_ab.sh  perf_attr.sh  perf_bytes.sh  perf_mt_prefill.sh  perf_stall.sh  rebaseline.sh  ropetg_n1.sh  run_fullstack.sh  run_headtohead.sh  run_leaveoneout.sh  run_n1.sh  run_q4_ab.sh  run_ropetg.sh  run_tgsweep.sh  sweep.sh  tgsweep_n1.sh
lambda-core/: Cargo.toml
lambda-core/src/: lib.rs
qwen-lambda/: Cargo.toml  Dockerfile  README.md  coldstart.sh  fetch_model.sh  pack_model.sh
qwen-lambda/src/: engine.rs  main.rs
tools/gguf-allq4/: Cargo.toml
tools/gguf-allq4/src/: main.rs
tools/mem-profile/: Cargo.toml
tools/mem-profile/src/: main.rs
